# ml-from-scratch

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  NOTES.md  README.md
examples/: CMakeLists.txt  knn_example.cpp  linear_regression_example.cpp  naive_bayes_example.cpp  naive_bayes_iris_classification.cpp  naive_bayes_iris_example.cpp
examples/data/: iris_modify.py
include/models/: linear_regression.hpp  logistic_regression.hpp  naive_bayes.hpp  neighbors.hpp
include/nn/: autograd.hpp  layers.hpp  loss_function.hpp  model.hpp  optimizer.hpp  storage.hpp  tensor.hpp  utils.hpp
include/utils/: matrix.hpp  optimizer.hpp  trainer.hpp  utils.hpp
src/models/: linear_regression.cpp  logistic_regression.cpp  naive_bayes.cpp  neighbors.cpp
src/nn/: autograd.cpp  layers.cpp  model.cpp  storage.cpp  tensor.cpp  utils.cpp
src/utils/: matrix.cpp
test/: CMakeLists.txt  test_storage.cpp  test_tensor.cpp
tests/: CMakeLists.txt  linear_regression_sgd.py  linear_regression_test.cpp  matrix_test.cpp  naive_bayes_test.cpp  optimizer_test.cpp
